# rust-projects

./: .gitmodules  Cargo.toml  README.md  error.html  welcome.html
catr/: Cargo.toml
catr/src/: lib.rs
echor/: Cargo.toml
echor/src/: main.rs
echor/tests/: cli.rs
headr/: Cargo.toml
headr/src/: lib.rs
hello/tests/: cli.rs
mini-web-server/: Cargo.toml  README.md  welcome.html
mini-web-server/src/: lib.rs  main.rs
minigrepr/: Cargo.toml  README.md  tarpaulin-report.html
minigrepr/src/: lib.rs  main.rs
rust-blog/: Cargo.toml  README.md
rust-blog/src/: main.rs
rust-blog/src/assets/: post.css
rust-blog/src/posts/: post.md
rust-blog/templates/: base.html
rust-design-patterns/src/: creational_design_patterns.rs  lib.rs
rust-design-patterns/src/creational_design_patterns/: factory_design.rs
src/: lib.rs  main.rs
tree/src/: main.rs
