[package]
name = "minigrepr"
version = "0.1.1"
edition = "2021"
description = "A simplified version of the classic command line search tool grep that searches a specified file for a specified string. Not intended for general use."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
