[package]
name = "rust-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="*", features = ["macros", "rt-multi-thread"]}
axum = {version="*", features = ["headers"]}
askama = {version="*", features=["markdown"]}
sqlx = {version = "*", features = ["runtime-tokio-rustls", "postgres", "macros", "time"]} 
tower-http = {version = "*", features=["full"]}

[[bin]]
name = "rust-blog"
path = "src/main.rs"

[[bin]]
name = "postd"
path = "src/bin/postd.rs"